--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
+
+/* Removendo as configurações que limitam a largura */
 #root {
+  margin: 0;
+  padding: 0;
+  text-align: center;
   width: 100%;
-  min-height: 100vh;
+  max-width: none;
 }
 
 .logo {
